--- a/charts/prometheus-spring/Chart.yaml
+++ b/charts/prometheus-spring/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: helm-prometheus-spring
+name: prometheus-spring
 description: Helm chart for scraping spring applications
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -25,5 +25,5 @@ appVersion: "1.0.0"
 
 dependencies:
   - name: kube-prometheus-stack
-    version: 17.2.2
+    version: 18.0.0
     repository: https://prometheus-community.github.io/helm-charts
