--- a/charts/prometheus-spring/values.yaml
+++ b/charts/prometheus-spring/values.yaml
@@ -10,7 +10,7 @@ kube-prometheus-stack:
       additionalScrapeConfigs:
         - job_name: 'spring'
           kubernetes_sd_configs:
-            - role: service
+            - role: endpoints
 
           ## https://github.com/prometheus/prometheus/blob/main/documentation/examples/prometheus-kubernetes.yml
           ## this will scrape every service which has the following annotations
